--- a/scripts/0.md
+++ b/scripts/0.md
@@ -180,9 +180,9 @@ The formula for a standard floating point number is
 `(-1)^s * 2^(e-127) * (1 + m)`
 
 where:
-* s is the sign bit, interpreted as an unsigned number
-* e is the exponent bits, interpreted as an unsigned number
-* m is the mantissa bits, interpreted as a fraction
+* `s` is the sign bit, interpreted as an unsigned number
+* `e` is the exponent bits, interpreted as an unsigned number
+* `m` is the mantissa bits, interpreted as a fraction
 
 to interpret a binary number as a fraction, we follow a similar procedure
 to interpreting it as an unsigned integer, except the power of 2 we multiply by
@@ -208,10 +208,10 @@ First break it up into its components:
 
 From this,
 
-* s is 0
-* e is 128
-* the unsigned interpretation of m is 4788187, meaning the fraction
-interpretation is `4788187 * 2^-23` giving us a value of about 0.5707963
+* `s` is 0
+* `e` is 128
+* the unsigned interpretation of `m` is 4788187, meaning the fraction
+interpretation is `4788187 * 2^-23` giving us a value of about `0.5707963`
 
 Plugging this into our formula above, we get 
 `(-1)^0 * 2^(128-127) * (1 + 0.5707963) = 3.1415926...`
