add auto compile

--- a/scripts/0.md
+++ b/scripts/0.md
@@ -216,6 +216,45 @@ interpretation is `4788187 * 2^-23` giving us a value of about `0.5707963`
 Plugging this into our formula above, we get 
 `(-1)^0 * 2^(128-127) * (1 + 0.5707963) = 3.1415926...`
 
+**Question: Do you see any problems that may arise in floating point?**
+
+## Octal and Hexadecimal
+
+Other common formats are octal and hexadecimal.  These are number systems which
+use 8 and 16 symbols respectively, instead of 2 as in binary.  They are
+sometimes used to write down numbers in computer science because they are more
+compact.  For instance, the binary number `110111010011` is the same as the
+octal number `6723`.  Note that you can easily convert between binary and octal
+by converting 3 bits at a time to one octal digit:
+`110 111 010 011 -> 6 7 2 3`.  In C, you can represent octal numbers with a
+leading `0`:
+
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    printf("0xdd3 = %d\n", 0xdd3);
+}
+```
+```
+>>> 0xdd3 = 3539
+```
+
+Hexadecimal is even more compact, and you can convert 4 binary digits to one
+hexadecimal digit.  For example `1101 1101 0011 -> 13 13 3 -> dd3`.  In C,
+you can represent hexadecimal numbers with a leading `0x`
+
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    printf("0xdd3 = %d\n", 0xdd3);
+}
+```
+```
+>>> 0xdd3 = 3539
+```
+
 -------------------------------------------------------------------------------
 # Conclusion
 
