--- a/notes/0.md
+++ b/notes/0.md
@@ -229,16 +229,30 @@ by converting 3 bits at a time to one octal digit:
 `110 111 010 011 -> 6 7 2 3`.  In C, you can represent octal numbers with a
 leading `0`:
 
-```snippet
-{snippets/octal.c}
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    printf("010 = %d\n", 06723);
+}
+```
+```
+>>> 010 = 3539
 ```
 
 Hexadecimal is even more compact, and you can convert 4 binary digits to one
 hexadecimal digit.  For example `1101 1101 0011 -> 13 13 3 -> dd3`.  In C,
 you can represent hexadecimal numbers with a leading `0x`
 
-```snippet
-{snippets/hexadecimal.c}
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    printf("0xdd3 = %d\n", 0xdd3);
+}
+```
+```
+>>> 0xdd3 = 3539
 ```
 
 -------------------------------------------------------------------------------
