--- a/notes/0.md
+++ b/notes/0.md
@@ -237,7 +237,7 @@ int main() {
 }
 ```
 ```
->>> 010 = 3539
+010 = 3539
 ```
 
 Hexadecimal is even more compact, and you can convert 4 binary digits to one
@@ -252,7 +252,7 @@ int main() {
 }
 ```
 ```
->>> 0xdd3 = 3539
+0xdd3 = 3539
 ```
 
 -------------------------------------------------------------------------------
