--- a/notes/1.md
+++ b/notes/1.md
@@ -93,17 +93,10 @@ While this gives us a lot of possibilities, you should always ask whether you
 should before you ask whether you can.  What follows is a quote from "The C
 Programming Language" by Brian Kerninghan and Dennis Ritchie.
 
-"It’s wise to choose variable names that are related to the purpose of the
+*It’s wise to choose variable names that are related to the purpose of the
 variable, and that are unlikely to get mixed up typographically. We tend to use
 short names for local variables, especially loop indices, and longer names for
-external variables"
-
-```
-"It’s wise to choose variable names that are related to the purpose of the
-variable, and that are unlikely to get mixed up typographically. We tend to use
-short names for local variables, especially loop indices, and longer names for
-external variables"
-```
+external variables*
 
 Naming is mundane, but extremely important in all of programming.  You should
 err on the side of caution toward longer more descriptive variable names.
