--- a/source/0.md
+++ b/source/0.md
@@ -230,7 +230,7 @@ by converting 3 bits at a time to one octal digit:
 leading `0`:
 
 ```snippet
-{snippets/octal.c}
+{"code": "snippets/octal.c"}
 ```
 
 Hexadecimal is even more compact, and you can convert 4 binary digits to one
@@ -238,7 +238,7 @@ hexadecimal digit.  For example `1101 1101 0011 -> 13 13 3 -> dd3`.  In C,
 you can represent hexadecimal numbers with a leading `0x`
 
 ```snippet
-{snippets/hexadecimal.c}
+{"code": "snippets/hexadecimal.c"}
 ```
 
 -------------------------------------------------------------------------------
