--- a/notes/1.md
+++ b/notes/1.md
@@ -123,6 +123,8 @@ fundamental types are: char, int, float, and double.
 * double
 
 -------------------------------------------------------------------------------
+## Chars
+
 A char represents a character, like 'A', '0' or hyphen for example.  Note that
 if they are declared with a value, that value must be surrounded with single
 quotes, not double quotes.
@@ -147,6 +149,8 @@ char [max] = 127
 ```
 
 -------------------------------------------------------------------------------
+## Ints
+
 An int is used to represent an integer like -30, 12 or 1e5.
 
 ```c
@@ -169,6 +173,8 @@ int [max] = 2147483647
 ```
 
 -------------------------------------------------------------------------------
+## Floats
+
 A float is used to represent non integer numbers like -2.7, 5.3, or 2e-6
 
 ```c
@@ -190,6 +196,8 @@ float [smallest] = 1.19209e-07
 ```
 
 -------------------------------------------------------------------------------
+## Doubles
+
 Finally, a double is like a float but it is more precise and takes up more
 space.  We will look at the difference in more depth shortly.
 
