--- a/source/1.md
+++ b/source/1.md
@@ -77,6 +77,8 @@ fundamental types are: char, int, float, and double.
 * double
 
 -------------------------------------------------------------------------------
+## Chars
+
 A char represents a character, like 'A', '0' or hyphen for example.  Note that
 if they are declared with a value, that value must be surrounded with single
 quotes, not double quotes.
@@ -86,6 +88,8 @@ quotes, not double quotes.
 ```
 
 -------------------------------------------------------------------------------
+## Ints
+
 An int is used to represent an integer like -30, 12 or 1e5.
 
 ```snippet
@@ -93,6 +97,8 @@ An int is used to represent an integer like -30, 12 or 1e5.
 ```
 
 -------------------------------------------------------------------------------
+## Floats
+
 A float is used to represent non integer numbers like -2.7, 5.3, or 2e-6
 
 ```snippet
@@ -100,6 +106,8 @@ A float is used to represent non integer numbers like -2.7, 5.3, or 2e-6
 ```
 
 -------------------------------------------------------------------------------
+## Doubles
+
 Finally, a double is like a float but it is more precise and takes up more
 space.  We will look at the difference in more depth shortly.
 
