update float limits

--- a/notes/1.md
+++ b/notes/1.md
@@ -187,12 +187,14 @@ int main() {
     float b = 5.3;
     float c = 2e-6;
     printf("float [max] = %g\n", FLT_MAX);
-    printf("float [smallest] = %g\n", FLT_EPSILON);
+    printf("float [min] = %g\n", FLT_MIN);
+    printf("float [epsilon] = %g\n", FLT_EPSILON);
 }
 ```
 ```
 float [max] = 3.40282e+38
-float [smallest] = 1.19209e-07
+float [min] = 1.17549e-38
+float [epsilon] = 1.19209e-07
 ```
 
 -------------------------------------------------------------------------------
@@ -211,11 +213,13 @@ int main() {
     double b = 5.3;
     double c = 2e-6;
     printf("double [max] = %g\n", DBL_MAX);
+    printf("double [min] = %g\n", DBL_MIN);
     printf("double [smallest] = %g\n", DBL_EPSILON);
 }
 ```
 ```
 double [max] = 1.79769e+308
+double [min] = 2.22507e-308
 double [smallest] = 2.22045e-16
 ```
 
@@ -342,6 +346,7 @@ int main() {
     printf("long long int [max] = %lld\n", LLONG_MAX);
 
     printf("long double [max] = %Lg\n", LDBL_MAX);
+    printf("long double [min] = %Lg\n", LDBL_MIN);
     printf("long double [smallest] = %Lg\n", LDBL_EPSILON);
 }
 
@@ -354,6 +359,7 @@ long int [max] = 9223372036854775807
 long long int [min] = -9223372036854775808
 long long int [max] = 9223372036854775807
 long double [max] = 1.18973e+4932
+long double [min] = 3.3621e-4932
 long double [smallest] = 1.0842e-19
 ```
 
