add built notes

--- a/notes/1.md
+++ b/notes/1.md
@@ -368,4 +368,7 @@ long double [smallest] = 1.0842e-19
 
 This is a lot to information to absorb.  Lucky for you, all of this information
 is built into the C language itself.  Use the built in constants in the code
-examples in this chapter.
+examples in this chapter, and find more in these excellent documentation pages:
+
+* [limits.h][http://www.cplusplus.com/reference/climits/]
+* [float.h][http://www.cplusplus.com/reference/cfloat/]
