--- a/source/1.md
+++ b/source/1.md
@@ -152,10 +152,10 @@ values at least in the range of -32,767 to 32,767.  Unsigned integers have the
 same nubmer of bits and therefore can store any value in the range of 0 to
 65,635.
 
-|      | bits | signed          | unsigned  |
-|------|------|-----------------|-----------|
-| char | 8    | [-128, 127]     | [0, 255]  |
-| int  | 16   | [-32768, 32767] | [0, 65635 |
+|      | bits | signed          | unsigned   |
+|------|------|-----------------|------------|
+| char | 8    | [-128, 127]     | [0, 255]   |
+| int  | 16   | [-32768, 32767] | [0, 65635] |
 
 ```snippet
 {"code": "snippets/signed_vs_unsigned.c"}
