--- a/source/1.md
+++ b/source/1.md
@@ -1,7 +1,6 @@
-# Variables, Types, Operators, Expressions
+# Variables and Types
 
-This section discusses variables, types, operators, and expressions.  These
-concepts are fundamental to most programming languages.
+This section discusses variables and tpyes.
 
 -------------------------------------------------------------------------------
 ## Variables
