--- a/source/2.md
+++ b/source/2.md
@@ -34,8 +34,12 @@ a value larger than the maximum.  C does not cause any errors in this case, it
 merely plays along, and adds them as it would normally.  Except in this case,
 there is a carry at the end that the variable simply as no space for, and it
 discards it.  This is called overflow.  You should notice then that the result
-isn't random.  The result is what happens when you add the numbers normally,
-except that past 32,767 it loops around to `-32,768`
+isn't completely random.  The result is what happens when you add the numbers
+normally, except that past 32,767 it loops around to `-32,768`.  However, this
+is not strictly defined in the standard, and a different compiler on a
+different machine may produce a different result!  So if you are trying to
+write very safe code, you need to be very careful, and avoid overflow from
+happening in the first place.
 
 ```snippet
 {"code": "snippets/overflow_addition_exact.c"}
@@ -45,9 +49,11 @@ except that past 32,767 it loops around to `-32,768`
 {"code": "snippets/overflow_addition_exact_max.c"}
 ```
 
-This means we can check if overflow occurred by checking that the sign of the
-result is the same as the sign of both inputs (if they are the same, otherwise
-overflow wouldn't occur)
+In this course, it will generally be okay to use long integers and hope for the
+best.
+
+**Question: Can you write code to check if an overflow will occur before
+actually performing an addition?**
 
 ### Multiplication (`*`)
 
@@ -56,3 +62,32 @@ This is an example of a multiplication of two integers:
 ```snippet
 {"code": "snippets/multiplication.c"}
 ```
+
+As mentioned in the previous section, overflow is still an issue, and it is
+even easier to overflow with multiplication.
+
+```snippet
+{"code": "snippets/multiplication_overflow.c"}
+```
+
+**Question: In general, what is the maximum number of bits you would need to
+store the product of two N-bit numbers? Hint: How about for N-digit decimal
+numbers?**
+
+Multiplication of floating point numbers is similar.  While overflow is still a
+possibility, it is less of a concern due to the large range of floating point
+numbers.
+
+### Division (`*`)
+
+This is an example of division for two integers:
+
+```snippet
+{"code": "snippets/division_ints.c"}
+```
+
+Note that if you divide two integers, the result itself is an integer, even
+if the numbers do not divide evenly.  To find the remainder, subtract the
+product of the divisor and the quotient from the dividend as in the code above.
+
+This is an example of division for two floating point numbers:
