--- a/notes/2.md
+++ b/notes/2.md
@@ -54,8 +54,12 @@ a value larger than the maximum.  C does not cause any errors in this case, it
 merely plays along, and adds them as it would normally.  Except in this case,
 there is a carry at the end that the variable simply as no space for, and it
 discards it.  This is called overflow.  You should notice then that the result
-isn't random.  The result is what happens when you add the numbers normally,
-except that past 32,767 it loops around to `-32,768`
+isn't completely random.  The result is what happens when you add the numbers
+normally, except that past 32,767 it loops around to `-32,768`.  However, this
+is not strictly defined in the standard, and a different compiler on a
+different machine may produce a different result!  So if you are trying to
+write very safe code, you need to be very careful, and avoid overflow from
+happening in the first place.
 
 ```c
 #include <stdio.h> /* printf */
@@ -85,9 +89,11 @@ int main() {
 32767 + 32767 = -2
 ```
 
-This means we can check if overflow occurred by checking that the sign of the
-result is the same as the sign of both inputs (if they are the same, otherwise
-overflow wouldn't occur)
+In this course, it will generally be okay to use long integers and hope for the
+best.
+
+**Question: Can you write code to check if an overflow will occur before
+actually performing an addition?**
 
 ### Multiplication (`*`)
 
@@ -106,3 +112,58 @@ int main() {
 ```
 a*a + b*b = 25
 ```
+
+As mentioned in the previous section, overflow is still an issue, and it is
+even easier to overflow with multiplication.
+
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    short int a = 300;
+    short int b = 400;
+    short int c = a*a + b*b;
+    printf("a*a + b*b = %d\n", c);
+}
+```
+```
+a*a + b*b = -12144
+```
+
+**Question: In general, what is the maximum number of bits you would need to
+store the product of two N-bit numbers? Hint: How about for N-digit decimal
+numbers?**
+
+Multiplication of floating point numbers is similar.  While overflow is still a
+possibility, it is less of a concern due to the large range of floating point
+numbers.
+
+### Division (`*`)
+
+This is an example of division for two integers:
+
+```c
+#include <stdio.h> /* printf */
+
+int main() {
+    int dividend = 30;
+    int divisor = 4;
+    int quotient = dividend / divisor;
+    int remainder = dividend - quotient * divisor
+    printf("%d / %d = %d", dividend, divisor, quotient);
+    printf("%d = %d * %d + %d", dividend, divisor, quotient, remainder);
+}
+```
+```
+snippets/division_ints.c:7:50: error: expected ';' at end of declaration
+    int remainder = dividend - quotient * divisor
+                                                 ^
+                                                 ;
+1 error generated.
+```
+
+Note that if you divide two integers, the result itself is an integer, even
+if the numbers do not divide evenly.  To find the remainder, subtract the
+product of the divisor and the quotient from the dividend as in the code above.
+
+This is an example of division for two floating point numbers:
