--- a/notes/2.md
+++ b/notes/2.md
@@ -106,11 +106,11 @@ int main() {
     int a = 3;
     int b = 4;
     int c = a*a + b*b;
-    printf("a*a + b*b = %d\n", c);
+    printf("%d*%d + %d*%d = %d\n", a, a, b, b, c);
 }
 ```
 ```
-a*a + b*b = 25
+3*3 + 4*4 = 25
 ```
 
 As mentioned in the previous section, overflow is still an issue, and it is
@@ -123,11 +123,11 @@ int main() {
     short int a = 300;
     short int b = 400;
     short int c = a*a + b*b;
-    printf("a*a + b*b = %d\n", c);
+    printf("%d*%d + %d*%d = %d\n", a, a, b, b, c);
 }
 ```
 ```
-a*a + b*b = -12144
+300*300 + 400*400 = -12144
 ```
 
 **Question: In general, what is the maximum number of bits you would need to
@@ -149,17 +149,16 @@ int main() {
     int dividend = 30;
     int divisor = 4;
     int quotient = dividend / divisor;
-    int remainder = dividend - quotient * divisor
-    printf("%d / %d = %d", dividend, divisor, quotient);
+    int remainder = dividend - quotient * divisor;
+    printf("%d / %d = %d", dividend, divisor, quotient, remainder);
     printf("%d = %d * %d + %d", dividend, divisor, quotient, remainder);
 }
 ```
 ```
-snippets/division_ints.c:7:50: error: expected ';' at end of declaration
-    int remainder = dividend - quotient * divisor
-                                                 ^
-                                                 ;
-1 error generated.
+snippets/division_ints.c:8:57: warning: data argument not used by format string [-Wformat-extra-args]
+    printf("%d / %d = %d", dividend, divisor, quotient, remainder);
+           ~~~~~~~~~~~~~~                               ^
+1 warning generated.
 ```
 
 Note that if you divide two integers, the result itself is an integer, even
