--- a/source/2.md
+++ b/source/2.md
@@ -91,3 +91,7 @@ if the numbers do not divide evenly.  To find the remainder, subtract the
 product of the divisor and the quotient from the dividend as in the code above.
 
 This is an example of division for two floating point numbers:
+
+```snippet
+{"code": "snippets/division_floats.c"}
+```
