--- a/notes/2.md
+++ b/notes/2.md
@@ -150,16 +150,12 @@ int main() {
     int divisor = 4;
     int quotient = dividend / divisor;
     int remainder = dividend - quotient * divisor;
-    printf("%d / %d = %d", dividend, divisor, quotient, remainder);
+    printf("%d / %d = %d", dividend, divisor, quotient);
     printf("%d = %d * %d + %d", dividend, divisor, quotient, remainder);
 }
 ```
 ```
-snippets/division_ints.c:8:57: warning: data argument not used by format string [-Wformat-extra-args]
-    printf("%d / %d = %d", dividend, divisor, quotient, remainder);
-           ~~~~~~~~~~~~~~                               ^
-1 warning generated.
-```
+30 / 4 = 730 = 4 * 7 + 2```
 
 Note that if you divide two integers, the result itself is an integer, even
 if the numbers do not divide evenly.  To find the remainder, subtract the
@@ -171,12 +167,14 @@ This is an example of division for two floating point numbers:
 #include <stdio.h> /* printf */
 
 int main() {
-    float dividend = 30.0;
-    float divisor = 4.0;
+    float dividend = 31.7;
+    float divisor = 5.3;
     float quotient = dividend / divisor;
-    printf("%.16f / %.16f = %.16f", dividend, divisor, quotient);
-    printf("%.16f = %.16f * %.16f", dividend, divisor, quotient);
+    printf("%.16f / %.16f = %.16f\n", dividend, divisor, quotient);
+    printf("%.16f = %.16f * %.16f\n", dividend, divisor, quotient);
 }
 ```
 ```
-30.0000000000000000 / 4.0000000000000000 = 7.500000000000000030.0000000000000000 = 4.0000000000000000 * 7.5000000000000000```
+31.7000007629394531 / 5.3000001907348633 = 5.9811320304870605
+31.7000007629394531 = 5.3000001907348633 * 5.9811320304870605
+```
