--- a/notes/2.md
+++ b/notes/2.md
@@ -150,12 +150,14 @@ int main() {
     int divisor = 4;
     int quotient = dividend / divisor;
     int remainder = dividend - quotient * divisor;
-    printf("%d / %d = %d", dividend, divisor, quotient);
-    printf("%d = %d * %d + %d", dividend, divisor, quotient, remainder);
+    printf("%d / %d = %d\n", dividend, divisor, quotient);
+    printf("%d = %d * %d + %d\n", dividend, divisor, quotient, remainder);
 }
 ```
 ```
-30 / 4 = 730 = 4 * 7 + 2```
+30 / 4 = 7
+30 = 4 * 7 + 2
+```
 
 Note that if you divide two integers, the result itself is an integer, even
 if the numbers do not divide evenly.  To find the remainder, subtract the
@@ -170,11 +172,15 @@ int main() {
     float dividend = 31.7;
     float divisor = 5.3;
     float quotient = dividend / divisor;
+    float product = quotient * divisor
     printf("%.16f / %.16f = %.16f\n", dividend, divisor, quotient);
-    printf("%.16f = %.16f * %.16f\n", dividend, divisor, quotient);
+    printf("%.16f = %.16f * %.16f\n", product, quotient, divisor);
 }
 ```
 ```
-31.7000007629394531 / 5.3000001907348633 = 5.9811320304870605
-31.7000007629394531 = 5.3000001907348633 * 5.9811320304870605
+snippets/division_floats.c:7:39: error: expected ';' at end of declaration
+    float product = quotient * divisor
+                                      ^
+                                      ;
+1 error generated.
 ```
