--- a/notes/2.md
+++ b/notes/2.md
@@ -149,9 +149,9 @@ int main() {
     int dividend = 30;
     int divisor = 4;
     int quotient = dividend / divisor;
-    int remainder = dividend - quotient * divisor;
+    int remaining = dividend - quotient * divisor;
     printf("%d / %d = %d\n", dividend, divisor, quotient);
-    printf("%d = %d * %d + %d\n", dividend, divisor, quotient, remainder);
+    printf("%d = %d * %d + %d\n", dividend, divisor, quotient, remaining);
 }
 ```
 ```
@@ -172,15 +172,12 @@ int main() {
     float dividend = 31.7;
     float divisor = 5.3;
     float quotient = dividend / divisor;
-    float product = quotient * divisor
+    float product = quotient * divisor;
     printf("%.16f / %.16f = %.16f\n", dividend, divisor, quotient);
     printf("%.16f = %.16f * %.16f\n", product, quotient, divisor);
 }
 ```
 ```
-snippets/division_floats.c:7:39: error: expected ';' at end of declaration
-    float product = quotient * divisor
-                                      ^
-                                      ;
-1 error generated.
+31.7000007629394531 / 5.3000001907348633 = 5.9811320304870605
+31.7000007629394531 = 5.9811320304870605 * 5.3000001907348633
 ```
