--- a/source/2.md
+++ b/source/2.md
@@ -95,3 +95,17 @@ This is an example of division for two floating point numbers:
 ```snippet
 {"code": "snippets/division_floats.c"}
 ```
+
+Huh...  That's weird.
+
+### Floating Point Precision
+
+You can see a strange result.  Even though the two quotients we produce here
+should be mathematically they same, they differ.  The reason for this is that
+in the second case, we try to store the value `1.0/77777.0`, but this number
+is not representable in our format, similar to how `1/7` is not representable
+in the decimal format without an infinite number of digits.
+
+This shows an an important lesson: you should generally not check to see if
+two floating point numbers are equal, but just that they are close enough, or
+if their difference is small.
