--- a/notes/2.md
+++ b/notes/2.md
@@ -169,15 +169,29 @@ This is an example of division for two floating point numbers:
 #include <stdio.h> /* printf */
 
 int main() {
-    float dividend = 51.7;
-    float divisor = 5.3;
-    float quotient = dividend / divisor;
-    float product = quotient * divisor;
-    printf("%.5f / %.5f = %.5f\n", dividend, divisor, quotient);
-    printf("%.5f = %.5f * %.5f\n", product, quotient, divisor);
+    float dividend = 77777.0;
+    float divisor = 7.0;
+    float quotient_a = dividend / divisor;
+    float inverse = 1.0 / divisor;
+    float quotient_b = dividend * inverse;
+    printf("%.10f vs. \n%.10f\n", quotient_a, quotient_b);
 }
 ```
 ```
-51.70000 / 5.30000 = 9.75472
-51.70000 = 9.75472 * 5.30000
+11111.0000000000 vs. 
+11111.0009765625
 ```
+
+Huh...  That's weird.
+
+### Floating Point Precision
+
+You can see a strange result.  Even though the two quotients we produce here
+should be mathematically they same, they differ.  The reason for this is that
+in the second case, we try to store the value `1.0/77777.0`, but this number
+is not representable in our format, similar to how `1/7` is not representable
+in the decimal format without an infinite number of digits.
+
+This shows an an important lesson: you should generally not check to see if
+two floating point numbers are equal, but just that they are close enough, or
+if their difference is small.
